--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-    "name": "@fullstacked/codemirror-view",
-    "version": "0.0.0",
-    "main": "./codeMirrorView.ts",
     "dependencies": {
         "@codemirror/lang-css": "^6.3.1",
         "@codemirror/lang-go": "^6.0.1",
@@ -15,6 +12,9 @@
         "@codemirror/state": "^6.5.2",
         "@codemirror/theme-one-dark": "^6.1.3",
         "@codemirror/view": "^6.38.1",
-        "codemirror": "^6.0.2"
-    }
+        "codemirror": "6.0.2"
+    },
+    "main": "./codeMirrorView.ts",
+    "name": "@fullstacked/codemirror-view",
+    "version": "0.0.0"
 }
