--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
         "@codemirror/lang-python": "^6.2.1",
         "@codemirror/lang-sass": "^6.0.2",
         "@codemirror/state": "^6.5.2",
-        "@codemirror/theme-one-dark": "^6.1.3",
         "@codemirror/view": "^6.38.1",
         "codemirror": "6.0.2"
+    },
+    "devDependencies": {
+        "@codemirror/theme-one-dark": "^6.1.3"
     },
     "main": "./codeMirrorView.ts",
     "name": "@fullstacked/codemirror-view",
